test/fails/func_undef.imp
fun  main()
vars a
{       
		a = nosuchfunction(a);
        return a;
}
